--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 #wrapper{
     margin: 0 auto;
-    width:500px;
-    height:600px;
+    max-width:500px;
+    max-height:600px;
     padding: 10px;
     padding-left:100px;
     background-color: #B2CAF6;
@@ -9,4 +9,9 @@
 }
 h3,p{
     font-family: "Georgia", sans-serif;
+}
+@media screen and (max-width:530px){
+    #wrapper{
+        padding: 2px;
+    }
 }
